boreal/tests/assets/invalid_files/compilation/expression_incompatible_types.yar
// [error: expressions have invalid types]
rule a {
    condition:
        15 + "foo" == 3
}
